# nhbc-session-07-thay

./: 01-Warmup-Exercises.qmd  02-Exercises.qmd  03-AI-Challenge.qmd  04-Performance-Handout.qmd  06-Git-Lab.qmd  README.md  main.py  pyproject.toml
AI-Lab-Starter/: app.py  properties.csv
App-Starter/: app.py  performance_lab.py
Warmup-Starter/: 01_hello.py  02_reactive.py  03_widgets.py  04_layout.py
