[project]
name = "nhbc-session-07"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainladder>=0.8.26",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "openai>=2.11.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "polars>=1.36.1",
    "scipy>=1.16.3",
    "shiny>=1.5.1",
    "shinywidgets>=0.7.0",
]
